5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1723_2496.log
== TEST (2019-05-09 10:18:10) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:35) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	
	print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:18:43) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	
	print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:20:32) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
	print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:20:50) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
	print(sn)
-- EXECUTION TIME:
0.432384
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:03) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:21:23) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
print(sn)
-- EXECUTION TIME:
0.23746
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:21:48) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:24:06) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
while(n>-1):
	sn=n +sn
	n=int(input("digite um numero: "))
print(sn)
-- EXECUTION TIME:
0.148831
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:26:10) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n>-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- EXECUTION TIME:
0.117707
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:26:43) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n>-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:26:58) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n>-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:08) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n>-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:27:31) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n=!-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- EXECUTION TIME:
0.152926
-- ERROR:
  File "/home/codebench/codes/1723/2496/main.py", line 4
    while(n=!-1):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:43) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n!=-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:27:53) 
-- CODE:
n =int(input("digite um numero: "))
sn=0
cont= 0
while(n!=-1):
	sn=n +sn
	cont=cont+1
	n=int(input("digite um numero: "))
print(sn)
-- EXECUTION TIME:
0.129974
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
